# harsh_realm

./: Cargo.toml  README.md  pyproject.toml
crates/harsh_realm_bevy/: Cargo.toml
crates/harsh_realm_bevy/src/: main.rs
crates/harsh_realm_bevy/src/ui/: mod.rs
crates/harsh_realm_sim/: Cargo.toml
crates/harsh_realm_sim/src/: game_state.rs  lib.rs
crates/harsh_realm_sim/src/resources/: mod.rs
crates/harsh_realm_sim/src/universe/: celestial_body.rs  solar_system_manager.rs
crates/harsh_realm_sim/tests/: smoke.rs
docs/: README.md  todo.md
scripts/: README.md  excel_to_csv_converter.py  run_converter.bat  run_converter.ps1  version_manager.py
src/: game_state.rs  main.rs
src/buildings/: building_type.rs
src/events/: narrative_event.rs
src/faction/: faction.rs  faction_ai.rs
src/maps/: location.rs  mod.rs  tile.rs
src/population/: person_type.rs
src/production/: process.rs  product.rs  product_input.rs  product_output.rs  production_chain.rs
src/resources/: resource_manager.rs  resource_type.rs
src/structures/: installation.rs  settlement.rs  spacecraft.rs  structure_type.rs
src/units/: unit.rs  unit_type.rs
src/universe/: celestial_body.rs  mod.rs  solar_system.rs  space_region.rs
