[package]
name = "harsh_realm_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
hex2d = "1.1.0"
log = "0.4"
nalgebra = { version = "0.33", features = ["serde-serialize"] }
rand = "0.9"
rand_chacha = "0.9"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
bevy = { version = "0.12.1", optional = true }

[features]
bevy-integration = ["bevy"]
default = []
